Mudanças no index

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
 		<div class="topicos" id="experiencias">
 			<h2>Experiências:</h2>
 			<ul>
-				<li>Técnico em Telecomunicações na empresa R&G Telecom</li>
+				<li>Técnico em Telecomunicações na empresa R&G TelecomXXXXXXXXXXXXXXX</li>
 			</ul>		
 		</div>	
 
