Adicionando uma cor de fundo e ajeitando algums coisas nas bordas

--- a/src/index.html
+++ b/src/index.html
@@ -43,10 +43,10 @@
 		</div>
 
 		<div id="superior" style="position: fixed;">
-				<a id="menu" href="#quemSouEu"> Quem sou eu | </a>
-				<a id="menu" href="#formacoes"> Formações | </a>
-				<a id="menu" href="#habilidades"> Habilidades | </a>
-				<a id="menu" href="#experiencias"> Experiências | </a>
+				<a id="menu" href="#quemSouEu"> Quem sou eu    |   </a>
+				<a id="menu" href="#formacoes"> Formações    |   </a>
+				<a id="menu" href="#habilidades"> Habilidades    |   </a>
+				<a id="menu" href="#experiencias"> Experiências    |   </a>
 				<a data-toggle="modal" id="menu" href="#ModalContato"> Contato </a>
 		</div>
 
@@ -78,7 +78,7 @@
 		<div class="topicos" id="experiencias">
 			<h2>Experiências:</h2>
 			<ul>
-				<li>Técnico em Telecomunicações na empresa R&G TelecomXXXXXXXXXXXXXXX</li>
+				<li>Técnico em Telecomunicações na empresa R&G Telecom</li>
 			</ul>		
 		</div>	
 
