COnsertando os endereços do css e da imagem

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="../css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
 	</head>
 
 
@@ -53,7 +53,7 @@
 		<div class="topicos" id="quemSouEu">
 			<h2>Quem sou eu: </h2>
 			<p>Meu nome é Gildo Augusto da Silva Freitas, nascido dia 19/04/1999 (19 anos) e sou natural de Mossoró, Rio Grande do Norte, mas atualmente moro em Natal. <br> Hoje em dia estou cursando o Bacharelado em Tecnologia da Informação na Universidade Federal do Rio Grande do Norte (UFRN).</p>
-			<img src="../imagem/foto_gildo.jpg" height="300">	
+			<img src="imagem/foto_gildo.jpg" height="300">	
 		</div>
 
 		<div class="topicos" id="formacoes">
